<resources>
    <string name="FACEBOOK_APP_ID">1183977361784281</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5ea017753925d51c30eb5a15a4397b42</string>
    <string name="app_name">AndroidStaffMyRestaurant</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="permission_deneged">Permiso denegado</string>
    <string name="signIn">SIGN IN</string>
    <string name="user_information">User Information</string>
    <string name="edtx_hint_name">Name</string>
    <string name="edtx_hint_address">Address</string>
    <string name="update">Update</string>
    <string name="update_information">Update Information</string>
    <string name="your_order">Your Orden</string>
    <string name="order">History Order</string>
    <string name="txt_order_number">Order #1234</string>
    <string name="txt_order_status">Processing</string>
    <string name="txt_order_phone">123456</string>
    <string name="txt_order_address">Address</string>
    <string name="txt_order_cod">COD</string>
    <string name="Order_on">Order on</string>
    <string name="txt_date_order">05/10/2019</string>
    <string name="txt_order_total_price">$180</string>
    <string name="txt_num_of_item">Num of item 2</string>
    <string name="txt_status">Status</string>
    <string name="action_save">Save</string>
    <string name="order_Detail">Order Detail</string>
    <string name="txt_food_name">Food Name</string>
    <string name="txt_food_quantity">Quantity: 2</string>
    <string name="txt_food_size">Size: Large</string>
    <string name="txt_Addon">Add on</string>
    <string name="hot_food">Hot Food</string>
</resources>
