<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/txt_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:text="@string/txt_order_number"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:text="@string/txt_order_status"
                android:textColor="@color/bt_border_color" />

            <TextView
                android:id="@+id/txt_order_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_phone" />

            <TextView
                android:id="@+id/txt_order_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_address"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_order_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_cod"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/magnifika"
                    android:text="@string/Order_on" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_gray_24dp" />

                <TextView
                    android:id="@+id/txt_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_date_order"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_order_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/txt_order_total_price"
                    android:textColor="@color/button_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_num_of_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/magnifika"
                    android:text="@string/txt_num_of_item" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>