<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_food_image"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:textSize="22sp"
                android:text="@string/txt_food_name"
                />

            <TextView
                android:id="@+id/txt_food_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/txt_food_quantity"
                />

            <TextView
                android:id="@+id/txt_food_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/txt_food_size"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>